# reacten

./: .gitignore  README.md  package.json  tsconfig.dev.json
native/: CMakeLists.txt  Makefile  canvas.cpp  canvas.h  container.h  jsapi.h  main.cpp
native/components/: button.h  component.cpp  component.h  text.h  textinput.h
public/: index.html  reacten.js
src/: App.tsx  index.tsx
src/components/: button.ts  text.ts  textinput.ts  view.ts
src/renderer/: container.ts  instance.ts  renderer.ts
